--- a/backend/templates/api/package.json
+++ b/backend/templates/api/package.json
@@ -19,6 +19,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "prisma": "^5.0.0",
-    "typescript": "^5.0.0"
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0"
   }
 }
